@@ -1,3 +1,8 @@
+22-June-2011 Michael Babker Version 1.8 Changes
++ Added JHtmlIcon helper for front end
+~ Made consistent JEXEC checks
+# Changed com_podcastmedia to delete menus on postflight (again)
+
 20-June-2011 Michael Babker Version 1.8 Changes
 + Rough addition of front end HTML view for feeds
 ~ Cleanup of the HTML view
